# fibbot

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  action.yml
.github/workflows/: intergration.yml
src/: main.rs
src/tests/: # PREVIEW.md  ## Immutability.md  ## Pattern matching.md  lib.rs
