[package]
name = "fib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }  # Asynchronous runtime
serde = { version = "1.0.219", features = ["derive"] }  # For serialization/deserialization
dotenv = "0.15"  # For environment variable management
reqwest = { version= "0.12.12", features = ["rustls-tls", "json"] } # For HTTP requests
octocrab = "0.17.0"
regex = "1.10.2"  # Use the latest version available
openssl = "0.10.39"

serde_json = "1.0"
num-bigint="0.4.3"
num-traits="0.2.14"
rustls ="0.23.0"

